force-app/main/default/objects/WA_API_Details_Gupshup__c/WA_API_Details_Gupshup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Gupshup APIs</description>
    <label>WA API Details Gupshup</label>
</CustomObject>