force-app/main/default/objects/WA_API_Details_Gupshup__c/fields/appId__c.field-meta.xml
<CustomField>
    <fullName>appId__c</fullName>
    <label>appId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>