force-app/main/default/objects/WA_API_Details_Gupshup__c/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <label>Connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>