force-app/main/default/objects/WA_API_Details_Gupshup__c/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <label>EndPoint</label>
    <type>Url</type>
</CustomField>