force-app/main/default/objects/WA_API_Details_Gupshup__c/fields/HandleId_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>HandleId_Endpoint__c</fullName>
    <label>HandleId Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>