force-app/main/default/objects/WA_API_Details_Gupshup__c/fields/Source_Phone__c.field-meta.xml
<CustomField>
    <fullName>Source_Phone__c</fullName>
    <label>Source Phone</label>
    <type>Phone</type>
</CustomField>