force-app/main/default/objects/WA_API_Details_Gupshup__c/fields/src_name__c.field-meta.xml
<CustomField>
    <fullName>src_name__c</fullName>
    <label>src.name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>